ingress-egress/worldtime-ingress-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: worldtime-ingressgateway
  namespace: istio-demo
  labels:
    cfg: ingress-egress
spec:
  selector:
    istio: custom-ingressgateway
    ns: istio-demo
  servers:
    - hosts:
        - 'worldtime.istio-demo.apps-crc.testing'
      port:
        name: http-worldtime
        number: 8081
        protocol: HTTP
