ingress-egress/dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dr-for-world-time
  namespace: istio-demo
  labels:
    cfg: ingress-egress
spec:
  host: custom-egressgateway-svc.istio-demo.svc.cluster.local
  subsets:
    - name: world-time-mtls
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
        portLevelSettings:
          - port:
              number: 443
              protocol: HTTPS
              name: https
            tls:
              mode: ISTIO_MUTUAL
              sni: worldtimeapi.org
