ingress-egress/jsonplaceholder-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jsonplaceholder-route
  namespace: istio-demo
spec:
  host: jsonplaceholder.istio-demo.apps-crc.testing
  to:
    kind: Service
    name: custom-ingressgateway-svc
    weight: 100
  port:
    targetPort: http-jsonplaceholder
