ingress-egress/jsonplaceholder-se.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: jsonplaceholder-se
  namespace: istio-demo
  labels:
    cfg: ingress-egress
spec:
  hosts:
    - jsonplaceholder.typicode.com
  location: MESH_EXTERNAL
  ports:
    - name: http
      number: 80
      protocol: HTTP
  resolution: DNS
